# docs/swagger.json
@@ -669,7 +669,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseDataUpdate"
+                            "$ref": "#/definitions/utils.ResponseDataUpdatedUser"
                         }
                     },
                     "400": {
@@ -713,7 +713,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseMessageDelete"
+                            "$ref": "#/definitions/utils.ResponseMessageDeletedUser"
                         }
                     },
                     "400": {
@@ -765,7 +765,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseDataLogin"
+                            "$ref": "#/definitions/utils.ResponseDataLoggedinUser"
                         }
                     },
                     "400": {
@@ -811,7 +811,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseDataRegister"
+                            "$ref": "#/definitions/utils.ResponseDataRegisteredUser"
                         }
                     },
                     "400": {
@@ -1219,7 +1219,7 @@
                 }
             }
         },
-        "utils.ResponseDataLogin": {
+        "utils.ResponseDataLoggedinUser": {
             "type": "object",
             "properties": {
                 "data": {
@@ -1231,23 +1231,11 @@
                 }
             }
         },
-        "utils.ResponseDataRegister": {
+        "utils.ResponseDataRegisteredUser": {
             "type": "object",
             "properties": {
                 "data": {
                     "$ref": "#/definitions/utils.RegisteredUser"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
-        "utils.ResponseDataUpdate": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/utils.UpdatedUser"
                 },
                 "status": {
                     "type": "string",
@@ -1291,12 +1279,11 @@
                 }
             }
         },
-        "utils.ResponseMessageDelete": {
+        "utils.ResponseDataUpdatedUser": {
             "type": "object",
             "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "your account has been successfully deleted"
+                "data": {
+                    "$ref": "#/definitions/utils.UpdatedUser"
                 },
                 "status": {
                     "type": "string",
@@ -1336,6 +1323,19 @@
                 "message": {
                     "type": "string",
                     "example": "your social media has been successfully deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "utils.ResponseMessageDeletedUser": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "your account has been successfully deleted"
                 },
                 "status": {
                     "type": "string",
@@ -1550,13 +1550,6 @@
                     "example": "johndoe"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "Bearer": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
